--- a/src/styles/_nav-footer.scss
+++ b/src/styles/_nav-footer.scss
@@ -23,6 +23,12 @@
     i {
       font-size: 15px;
       padding: 0 4px;
+      &:hover,
+      &:active {
+        background: linear-gradient(to right, #00d2ff, #928dab);
+        color: transparent;
+        background-clip: text;
+      }
     }
   }
   .footer-resume {
