--- a/src/styles/_homeBody.scss
+++ b/src/styles/_homeBody.scss
@@ -1,9 +1,6 @@
 .home {
   height: 100vh;
-  background-image: url("/img/bckgrnd.jpg");
-  background-position: center;
-  object-fit: cover;
-  //  background: linear-gradient(to right, #00d2ff, #928dab);
+  background-color: $star-colour;
   .home-body {
     height: 100%;
     display: flex;
@@ -11,10 +8,11 @@
     align-items: center;
     .container {
       width: 80%;
-      border-radius: 16px;
-      background-color: #141414;
+      border-radius: 37px;
+      background-color: $star-colour;
       display: flex;
       justify-content: center;
+      box-shadow: 13px 13px 29px #282a2b, -13px -13px 29px #383b3d;
       .sub-container {
         padding: 2rem;
         text-align: center;
@@ -30,18 +28,16 @@
           }
           p {
             font-size: 13px;
-            text-align: left;
+            text-align: justify;
+            line-height: 1.6;
           }
         }
         .fas {
           font-size: 29px;
           padding-bottom: 1rem;
-          &:hover,
-          &:active {
-            background: linear-gradient(to right, #00d2ff, #928dab);
-            color: transparent;
-            background-clip: text;
-          }
+          background: linear-gradient(to right, #00d2ff, #928dab);
+          color: transparent;
+          background-clip: text;
         }
         h3 {
           padding-bottom: 1.5rem;
@@ -131,11 +127,11 @@
     }
   }
 }
-@media (max-height: 632px) {
+@media (max-height: 682px) {
   .home {
     .home-body {
-      .container {
-        .sub-container {
+      .about-container {
+        .about-sub-container {
           padding: 0.9rem;
           .about {
             span {
@@ -143,7 +139,7 @@
               font-size: 17px;
             }
             p {
-              font-size: 11px;
+              font-size: 13px;
             }
           }
           .stack {
