--- a/src/styles/_languageToggle.scss
+++ b/src/styles/_languageToggle.scss
@@ -40,7 +40,7 @@
 }
 
 input:checked + .slider {
-  background-color: $bench-colour;
+  background: linear-gradient(to right, #00d2ff, #928dab);
 }
 
 input:focus + .slider {
