--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -1,112 +1,145 @@
-.home {
+.projects {
+  height: 110vh;
   .projects-body {
     height: 100%;
-    display: flex;
-    justify-content: center;
     .container {
-      padding: 4rem 2rem 2rem 2rem;
-      width: 80%;
+      display: flex;
+      justify-content: center;
+      padding: 3rem 0;
       .p-content {
-        .p-tile {
-          height: 150px;
+        .project-bod {
+          box-shadow: 13px 13px 29px #282a2b, -13px -13px 29px #383b3d;
+          display: flex;
+          flex-direction: column;
+          height: 455px;
+          width: 300px;
+          position: relative;
+          overflow: hidden;
+          align-items: center;
+          margin: 2rem 0;
+          justify-content: center;
           text-align: center;
-          .tile-title {
-            background-color: $star-colour;
-            padding: 8px 0;
-            border-radius: 10px 10px 0 0;
-            margin-top: 2rem;
-          }
-          .project-bod {
-            display: flex;
-            height: 115px;
-            align-items: center;
-            justify-content: center;
-            object-fit: cover;
-            background-position: center;
-            background-size: 100%;
-            border-radius: 0 0 10px 10px;
-            .background {
-              background-color: $star-colour;
-              padding: 6px 5px;
-              margin: 5px;
-              border-radius: 10px;
-              a {
-                text-decoration: none;
-                i {
-                  padding: 0 5px;
-                }
-                &:hover,
-                &:active {
-                  i {
-                    background: linear-gradient(to right, #00d2ff, #928dab);
-                    color: transparent;
-                    background-clip: text;
-                  }
-                }
+          border-radius: 10px;
+          &:hover {
+            img {
+              right: -100%;
+              filter: brightness(0);
+            }
+            .title {
+              box-shadow: 13px 13px 29px #282a2b, -13px -13px 29px #3a3d3f;
+              .tile-title {
+                background: linear-gradient(to right, #00d2ff, #928dab);
+                background-clip: text;
+                color: transparent;
               }
             }
           }
-          .one {
-            background: url("/img/project1.png");
+          img {
+            width: 100%;
+            height: 100%;
             object-fit: cover;
-            background-position: center;
-            background-size: 100%;
+            //card is relative, img will fit no matter what
+            position: absolute;
+            border-radius: 10px;
+            z-index: 1;
+            top: 0;
+            right: 0;
+            transition: all 0.5s;
           }
-          .two {
-            background: url("/img/project2.png");
-            object-fit: cover;
-            background-position: center;
-            background-size: 100%;
+          p {
+            padding: 0 20px;
+            text-align: justify;
+            line-height: 1.8;
           }
-          .three {
-            background: url("/img/project3.png");
-            object-fit: cover;
-            background-position: center;
-            background-size: 100%;
-            .background {
-              a {
-                margin: 0;
+          .xboxE {
+            line-height: 1.6;
+          }
+          .title {
+            position: relative;
+            top: -2rem;
+            padding: 0.5rem 1rem;
+            font-size: 20px;
+            border-radius: 10px;
+            z-index: 1;
+            background-color: $star-colour;
+            transition: all 0.5s;
+            .tile-title {
+              &:hover,
+              &:active {
+                background: linear-gradient(to right, #00d2ff, #928dab);
+                background-clip: text;
+                color: transparent;
               }
-              .fas {
-                display: none;
-                padding: 0;
+            }
+          }
+          .links {
+            display: flex;
+            flex-direction: row;
+            position: relative;
+            bottom: -2rem;
+          }
+          .background {
+            background-color: $star-colour;
+            padding: 6px 5px;
+            margin: 5px;
+            border-radius: 10px;
+            box-shadow: 9px 9px 18px #262829, -9px -9px 18px #3a3d3f;
+            &:active {
+              box-shadow: inset 9px 9px 18px #262829,
+                inset -9px -9px 18px #3a3d3f;
+            }
+            a {
+              text-decoration: none;
+              i {
+                padding: 0 5px;
+              }
+              &:hover,
+              &:active {
+                i {
+                  background: linear-gradient(to right, #00d2ff, #928dab);
+                  color: transparent;
+                  background-clip: text;
+                }
               }
             }
           }
         }
-      }
-    }
-  }
-}
-@media (min-width: 863px) {
-  .home {
-    .projects-body {
-      .container {
-        width: 500px;
-        padding-top: 8rem;
-        .p-content {
-          .p-tile {
-            height: 200px;
-            .project-bod {
-              height: 170px;
-            }
-          }
+        .one {
+          object-fit: cover;
+          background-position: center;
+          background-size: 100%;
+        }
+        .two {
+          object-fit: cover;
+          background-position: center;
+          background-size: 100%;
         }
       }
     }
   }
 }
 
-@media (max-height: 632px) {
-  .home {
+@media (min-width: 1100px) {
+  .projects {
+    height: 100vh;
     .projects-body {
-      height: 110vh;
       .container {
         .p-content {
-          .p-tile {
-            height: 110px;
-            .project-bod {
-              height: 90px;
+          display: flex;
+          flex-direction: row;
+          .project-bod {
+            width: 400px;
+            height: 630px;
+            margin: 10rem 2rem;
+            p {
+              line-height: 4rem;
+            }
+            .xboxE {
+              line-height: 3.5rem;
+            }
+            .title {
+              font-size: 22px;
+              padding: 1rem 2rem;
             }
           }
         }
