--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,8 +3,8 @@
 @import "nav-footer";
 @import "homeBody";
 @import "portfolio";
-@import "resume";
 @import "languageToggle";
+@import "skills";
 
 * {
   margin: 0;
