--- a/src/styles/_homeBody.scss
+++ b/src/styles/_homeBody.scss
@@ -1,18 +1,37 @@
 .home {
   height: 100vh;
-  background-color: $star-colour;
   .home-body {
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    .home-intro {
+      i {
+        text-align: center;
+        padding-bottom: 2rem;
+        font-size: 29px;
+        background: linear-gradient(to right, #00d2ff, #928dab);
+        background-clip: text;
+        color: transparent;
+      }
+      padding-bottom: 14%;
+      text-align: center;
+    }
     .container {
-      width: 80%;
-      border-radius: 37px;
-      background-color: $star-colour;
+      width: 280px;
+      border-radius: 17px;
       display: flex;
       justify-content: center;
       box-shadow: 13px 13px 29px #282a2b, -13px -13px 29px #383b3d;
+      &:hover,
+      &:active {
+        h3 {
+          background: linear-gradient(to right, #00d2ff, #928dab);
+          color: transparent;
+          background-clip: text;
+        }
+      }
       .sub-container {
         padding: 2rem;
         text-align: center;
@@ -32,79 +51,9 @@
             line-height: 1.6;
           }
         }
-        .fas {
-          font-size: 29px;
-          padding-bottom: 1rem;
-          background: linear-gradient(to right, #00d2ff, #928dab);
-          color: transparent;
-          background-clip: text;
-        }
         h3 {
-          padding-bottom: 1.5rem;
           font-weight: 400;
           font-size: 20px;
-        }
-        .stack {
-          display: grid;
-          justify-content: center;
-          grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-          grid-gap: 8px;
-          i {
-            font-size: 33px;
-          }
-          .js {
-            &:hover,
-            &:active {
-              background: #f2e204;
-              background-clip: text;
-              color: transparent;
-            }
-          }
-          .html {
-            &:hover,
-            &:active {
-              background: #f26b04;
-              background-clip: text;
-              color: transparent;
-            }
-          }
-          .css {
-            &:hover,
-            &:active {
-              background: #54c4dd;
-              background-clip: text;
-              color: transparent;
-            }
-          }
-          .sass {
-            &:hover,
-            &:active {
-              background: #ed34bb;
-              background-clip: text;
-              color: transparent;
-            }
-          }
-          .react {
-            &:hover,
-            &:active {
-              background: #00e5f9;
-              background-clip: text;
-              color: transparent;
-            }
-          }
-          .git {
-            &:hover,
-            &:active {
-              background: #f94f00;
-              background-clip: text;
-              color: transparent;
-            }
-          }
-
-          p {
-            font-size: 13px;
-            padding-top: 5px;
-          }
         }
       }
     }
@@ -114,40 +63,32 @@
   .home {
     .home-body {
       .container {
-        width: 500px;
-        padding: 0 3rem;
+        width: 400px;
+        padding: 0 1.5rem;
         .sub-container {
           .about {
             p {
               font-size: 16px;
             }
           }
+          h3 {
+            font-size: 24px;
+          }
+        }
+      }
+      .about-container {
+        .about-sub-container {
+          padding: 2.4rem 0;
         }
       }
     }
   }
 }
-@media (max-height: 682px) {
+@media (max-width: 482px) {
   .home {
     .home-body {
-      .about-container {
-        .about-sub-container {
-          padding: 0.9rem;
-          .about {
-            span {
-              padding-bottom: 0.4rem;
-              font-size: 17px;
-            }
-            p {
-              font-size: 13px;
-            }
-          }
-          .stack {
-            p {
-              font-size: 11px;
-            }
-          }
-        }
+      .home-intro {
+        width: 300px;
       }
     }
   }
